<resources>
    <string name="app_name">TareaLaboratorio3</string>
    <string name="powered_by_carlos_merino">Powered By: Carlos Merino</string>
    <string name="_503_70319666">+503 70319666</string>
    <string name="carmer194">CarMer194</string>
    <string name="carlos_merino194">carlos.merino194</string>
    <string name="carlos_merino">Carlos Merino</string>
    <string name="ingenieria_informatica">Ingenieria Informatica</string>
    <string name="compartir">compartir</string>
    <string name="mensajecompartir">Saludos soy Carlos Merino sigueme en mis redes:</string>
</resources>
